--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,6 +14,7 @@
             <a href="{{ url_for('main.add_expense') }}">Add Expense</a>
             <a href="{{ url_for('main.monthly_report') }}">Monthly Report</a>
             <a href="{{ url_for('main.yearly_report') }}">Yearly Report</a>
+            <a href="{{ url_for('main.profile') }}">Profile</a>
             <a href="{{ url_for('main.logout') }}">Logout</a>
         {% else %}
             <a href="{{ url_for('main.login') }}">Login</a>
